接口文档修改

--- a/15.monthBill.md
+++ b/15.monthBill.md
@@ -171,3 +171,31 @@
     ]
 }
 ```
+
+### 15.1.5 获取最近4个月各个路段已卖出的月票数量
+
+- 功能描述: 用户在App上购买月票时，获取最近4个月各个路段已卖出的月票数量
+- 调用端：`App`
+- 请求地址: `http://domain/customer/monthBills/soldMonthBillNum?access_token=69ff3003-dee1-40d5-a36f-c0c4fa55c431&roadSectionIds=1036`
+- 请求动作: `GET`
+- 请求示例: `http://localhost:8080/customer/monthBills/soldMonthBillNum?access_token=69ff3003-dee1-40d5-a36f-c0c4fa55c431&roadSectionIds=1036`
+
+
+- 返回数据
+```
+{
+    "status": "SUCCESS",
+    "data": [
+        {
+            "roadSectionId": 1036,
+            "soldNumGroupByMonth": {
+                "2018-1": 5,
+                "2018-3": 5,
+                "2017-12": 5,
+                "2018-2": 5
+            }
+        }
+    ]
+}
+```
+
