接口文档修改

--- a/15.monthBill.md
+++ b/15.monthBill.md
@@ -196,3 +196,50 @@
 }
 ```
 
+
+### 15.1.6 获取月票路段列表
+
+- 功能描述: 用户在App上购买月票时，获取获取月票路段列表
+- 调用端：`App`
+- 请求地址: `http://localhost:8080/customer/parkingAreas/1000?access_token=69ff3003-dee1-40d5-a36f-c0c4fa55c431&startMonth=2017-12&endMonth=2017-12`
+- 请求动作: `GET`
+- 请求示例: `http://localhost:8080/customer/parkingAreas/1000?access_token=69ff3003-dee1-40d5-a36f-c0c4fa55c431&startMonth=2017-12&endMonth=2017-12`
+
+
+- 返回数据
+```
+{
+    "status": "SUCCESS",
+    "data": [
+        {
+            "id": 1000,
+            "name": "望江西路-创新大道",
+            "unsoldMonthBillNum": 1000,
+            "monthBillPrice": 10000,
+            "parkingAreaName": "植保路"
+        },
+        {
+            "id": 1004,
+            "name": "test",
+            "unsoldMonthBillNum": 1000,
+            "monthBillPrice": 10000,
+            "parkingAreaName": "植保路"
+        },
+        {
+            "id": 1002,
+            "name": "长江西路",
+            "unsoldMonthBillNum": 1000,
+            "monthBillPrice": 10000,
+            "parkingAreaName": "植保路"
+        },
+        {
+            "id": 1003,
+            "name": "潜山路",
+            "unsoldMonthBillNum": 1000,
+            "monthBillPrice": 10000,
+            "parkingAreaName": "植保路"
+        }
+    ]
+}
+```
+
