接口文档修改

--- a/15.monthBill.md
+++ b/15.monthBill.md
@@ -206,3 +206,122 @@
     ]
 }
 ```
+
+### 15.1.6 获取指定路边停车场的路段信息
+
+- 功能描述：`获取指定路边停车场的路段信息`
+
+- 调用场景：`客户在购买月票时获取指定路边停车场的路段信息(路段id、路段名、月票剩余数量、月票单价)`
+
+- 请求地址：`http://domain/customer/parkingAreas/{id}？access_token&startMonth&endMonth&page&size`
+
+- 请求动作：`GET`
+
+- 请求示例：`http://localhost:8080/customer/parkingAreas/1000?access_token=69ff3003-dee1-40d5-a36f-c0c4fa55c431&startMonth=2017-12&endMonth=2017-12&page=0&size=10`
+
+- 返回示例：
+```json
+{
+    "status": "SUCCESS",
+    "data": {
+        "content": [
+            {
+                "id": 1000,
+                "name": "望江西路-创新大道",
+                "unsoldMonthBillNum": 1000,
+                "monthBillPrice": 1000,
+                "parkingAreaName": "植保路"
+            }
+        ],
+        "totalPages": 1,
+        "totalElements": 5,
+        "last": true,
+        "size": 20,
+        "number": 0,
+        "first": true,
+        "numberOfElements": 5,
+        "sort": null
+    }
+}
+```
+
+### 15.1.7 获取全部路段信息
+
+- 功能描述：`获取全部路段信息`
+
+- 调用场景：`客户在购买月票时获取全部路段信息(路段id、路段名、月票剩余数量、月票单价)`
+
+- 请求地址：`http://domain/customer/roadSections？access_token&startMonth&endMonth&page&size`
+
+- 请求动作：`GET`
+
+- 请求示例：`http://localhost:8080/customer/roadSections?access_token=69ff3003-dee1-40d5-a36f-c0c4fa55c431&startMonth=2017-12&endMonth=2017-12&page=0&size=10`
+
+- 返回示例：
+```json
+{
+    "status": "SUCCESS",
+    "data": {
+        "content": [
+            {
+                "id": 1000,
+                "name": "望江西路-创新大道",
+                "unsoldMonthBillNum": 1000,
+                "monthBillPrice": 1000,
+                "parkingAreaName": "植保路"
+            }
+        ],
+        "totalPages": 1,
+        "totalElements": 5,
+        "last": true,
+        "size": 20,
+        "number": 0,
+        "first": true,
+        "numberOfElements": 5,
+        "sort": null
+    }
+}
+```
+
+
+### 15.1.8 获取全部道路信息
+
+- 功能描述：`获取全部道路信息`
+
+- 调用场景：`客户在购买月票时获取全部道路信息(道路id，道路名称)`
+
+- 请求地址：`http://domain/customer/parkingAreas？access_token`
+
+- 请求动作：`GET`
+
+- 请求示例：`http://localhost:8080/customer/parkingAreas?access_token=69ff3003-dee1-40d5-a36f-c0c4fa55c431`
+
+- 返回示例：
+```json
+{
+    "status": "SUCCESS",
+    "data": [
+        {
+            "name": "岳东路停车场",
+            "id": 1003
+        },
+        {
+            "name": "植保路",
+            "id": 1000
+        },
+        {
+            "name": "岳东路停车场",
+            "id": 1002
+        },
+        {
+            "name": "岳东路停车场",
+            "id": 1004
+        },
+        {
+            "name": "888",
+            "id": 1001
+        }
+    ]
+}
+```
+
