接口文档修改

--- a/15.monthBill.md
+++ b/15.monthBill.md
@@ -251,11 +251,11 @@
 
 - 调用场景：`客户在购买月票时获取全部路段信息(路段id、路段名、月票剩余数量、月票单价)`
 
-- 请求地址：`http://domain/customer/roadSections？access_token&startMonth&endMonth&page&size`
+- 请求地址：`http://domain/customer/roadSections？access_token&district&startMonth&endMonth&page&size`
 
 - 请求动作：`GET`
 
-- 请求示例：`http://localhost:8080/customer/roadSections?access_token=69ff3003-dee1-40d5-a36f-c0c4fa55c431&startMonth=2017-12&endMonth=2017-12&page=0&size=10`
+- 请求示例：`http://localhost:8080/customer/roadSections?access_token=69ff3003-dee1-40d5-a36f-c0c4fa55c431&startMonth=2017-12&district=蜀山区&endMonth=2017-12&page=0&size=10`
 
 - 返回示例：
 ```json
