路段信息查询文档

--- a/15.monthBill.md
+++ b/15.monthBill.md
@@ -326,3 +326,54 @@
 }
 ```
 
+### 15.1.9 购买月票时获取路段
+
+- 功能描述：`获取路段信息`
+
+- 调用场景：`客户在购买月票时获取路段信息`
+
+- 请求地址：`http://domain:8080/customer/roadSections/roadSectionList`
+
+- 请求动作：`GET`
+
+- 请求示例：`http://domain:8080/customer/roadSections/roadSectionList?access_token=dd162dd1-26ec-45f4-a8ec-e99b00df4652&district=`
+
+- 返回示例：
+```json
+{
+    "status": "SUCCESS",
+    "data": [
+        {
+            "id": 1000,
+            "name": "望江西路-创新大道",
+            "parkingAreaName": "植保路",
+            "district": "蜀山区"
+        },
+        {
+            "id": 1003,
+            "name": "潜山路",
+            "parkingAreaName": "植保路",
+            "district": "蜀山区"
+        },
+        {
+            "id": 1001,
+            "name": "望江西路",
+            "parkingAreaName": "888",
+            "district": "肥东县"
+        },
+        {
+            "id": 1002,
+            "name": "长江西路",
+            "parkingAreaName": "植保路",
+            "district": "蜀山区"
+        },
+        {
+            "id": 1004,
+            "name": "test",
+            "parkingAreaName": "植保路",
+            "district": "蜀山区"
+        }
+    ]
+}
+```
+
