接口文档更新

--- a/15.monthBill.md
+++ b/15.monthBill.md
@@ -170,7 +170,7 @@
             "invoiceInfoSalerNameAbbr": null,
             "invoiceCode": "111001371071",
             "invoiceNumber": "70040249",
-            "buyerType": "1",
+            "invoiceInfoBuyerType": "1",
             "invoiceInfoBuyerName": "李剑",
             "invoiceInfoBuyerId": null,
             "invoiceInfoPriceAndTaxAmount": "46.0",
